--- a/src/css/blog/_config.scss
+++ b/src/css/blog/_config.scss
@@ -1,15 +1,15 @@
-$color1: rgba(172, 169, 169, 0.932);
-$primary-blue: #0689c4;
-$secondary-blue: hsl(194, 81%, 43%);
-$orange: #f6d342;
-$abstract: #f1efdc;
+$secondary: #eee;
+$abstract: #222831;
+$background: #ffd369;
+$primary :#393e46;
+
 $red: #d96243;
-$otherC: #663399;
+// $otherC: #663399;
 
 // Shopping section colors
-$bg: #23343b;
-$primary: #fa8d31;
-$secondary: #94a4a5;
+// $bg: #23343b;
+// $primary: #fa8d31;
+// $secondary: #94a4a5;
 
 @mixin border($color) {
   border: 2px solid transparent;
