--- a/src/css/blog/Adminpage/_adminpage.scss
+++ b/src/css/blog/Adminpage/_adminpage.scss
@@ -14,7 +14,7 @@
       color: #000;
       b {
         font-weight: 100;
-        color: $orange;
+        color: $secondary
       }
     }
   }
@@ -54,7 +54,7 @@
           border: none;
           font-size: 1.2rem;
           cursor: pointer;
-          box-shadow: 5px 10px 20px 1px $orange;
+          box-shadow: 5px 10px 20px 1px $secondary
         }
 
         &__desc {
