--- a/src/css/blog/Homepage/_Paragraph1.scss
+++ b/src/css/blog/Homepage/_Paragraph1.scss
@@ -1,100 +1,87 @@
 .paragraph_1 {
   @include border(red);
   width: 100vw;
-  height: 700px;
+  height: 680px;
   background-size: 110vw 500px;
   background-position: -50px 500px;
   background-repeat: no-repeat;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 5vh 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
 
-  section {
+  .paragraph_1-main {
     @include border(green);
-    width: 43vw;
+    width: 100%;
     height: 500px;
-    margin: 5vh 40px;
     font-size: 2rem;
     position: relative;
     padding: 3rem;
-    grid-area: 1/1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: grey;
-    background: #f4f4f4;
-    border-radius: 5px;
-
-    #q-left {
-      position: absolute;
-      top: 10px;
-      left: 20px;
-    }
-    #q-right {
-      position: absolute;
-      right: 20px;
-      bottom: 10px;
-      //   top: 100px;
-    }
-
-    .quote-item {
-      padding: 1rem;
-      color: red;
-    }
-    i {
-      font-size: 1rem;
-      color: grey;
-    }
-  }
-
-  &__art {
-    width: 30vw;
-    height: 800px;
-    position: relative;
-    left: 200px;
-    display: flex;
-    flex-direction: column;
-    grid-area: 1/2;
-
-    .trees {
-      width: 40vw;
-      height: 500px;
-      position: relative;
-      top: 5vh;
-      display: flex;
-      flex-direction: row;
-    }
-
-    @include border(red);
-  }
-
-  .tree_2 {
-    position: absolute;
-    right: 500px;
-  }
-
-  .buttons {
     display: flex;
     flex-direction: row;
-    text-align: left;
-    width: 500px;
-    height: 30vh;
-    justify-content: space-evenly;
-    padding: 1rem;
-    margin-top: 20px;
-    @include border(blue);
-    border-radius: 1rem;
-    flex-wrap: wrap-reverse;
+    justify-content: space-between;
+    align-items: center;
+    color: grey;
+    background: $abstract;
+    border-radius: 5px;
+    .quote {
+      @include border(green);
+      height: 350px;
+      width: 70%;
+      background: #f4f4f4;
+      position: absolute;
+      z-index: 100;
+
+      #q-left {
+        position: relative;
+        top: 10px;
+        left: 20px;
+      }
+      #q-right {
+        position: absolute;
+        right: 20px;
+        bottom: 30px;
+
+        @include border(green);
+        //   top: 100px;
+      }
+      p {
+        position: relative;
+        left: 100px;
+        width: 90%;
+      }
+      i {
+        font-size: 1rem;
+        position: relative;
+        left: 100px;
+        color: grey;
+      }
+    }
+
+    .trees {
+      width: 500px;
+      height: 500px;
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      @include border(red);
+      z-index: 1;
+    }
   }
-  .two{
+}
+
+.wavy-svg {
+  @include border(white);
+  position: relative;
+  // left: 100px;
+  .two {
     position: absolute;
-    bottom: -300px;
+    bottom: -00px;
   }
-  .one{
+  .one {
     position: absolute;
-    bottom: -50px;
+    bottom: -200px;
+    display: none;
     z-index: -1;
   }
 }
