--- a/src/css/blog/Homepage/_articles.scss
+++ b/src/css/blog/Homepage/_articles.scss
@@ -1,24 +1,21 @@
 .articles {
   @include border(green);
   width: 100vw;
-  height: 700px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  text-align: center;
+  height: 750px;
   position: relative;
 
   &__firstChild {
-    grid-area: 1/1;
-    margin: 0 0 0 150px;
-    color: orange;
-    width: 360px;
+    margin: 0 0 0 100px;
+    color: $primary;
+    width: 960px;
     height: fit-content;
     padding: 1rem;
     word-wrap: wrap;
-    text-align: center;
     position: relative;
     top: 50px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 300;
     @include border(red);
 
      .h2_1 {
@@ -31,23 +28,14 @@
       word-wrap: wrap;
       text-align: center;
       position: relative;
-      // top: 100px;
       @include border(green);
 
-      // & > .h2_1 {
-      //   font-size: 2rem;
-      //   font-weight: 100;
-      //   color: orange;
-      // }
-
-     
     }
     .h2_2 {
-      font-size: 2rem;
       height: 100px;
       @include border(brown);
       b{
-        font-size: 5rem;
+        font-size: 4rem;
       }
     }
     p {
@@ -57,7 +45,6 @@
       margin: 10% 10%;
       font-size: 15px;
       padding: 2rem;
-      grid-area: 2/1;
     }
 
     &__art {
@@ -70,35 +57,30 @@
   }
   .articles__paragraph {
     @include border(cyan);
-    height: fit-content;
-    margin: 0px 40px;
-    position: absolute;
-    bottom: 100px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    grid-area: 1/1;
 
     p {
       @include border(gold);
       width: 40vw;
-      height: 200px;
-      font-size: 15px;
+      height: 250px;
+      font-size: 17px;
+      font-weight: 100;
       padding: 2rem;
+      line-height: 1.5;
+      color: $primary;
     }
 
     .buttons {
+      width: fit-content;
+      height: fit-content;
       display: flex;
       flex-direction: row;
-      text-align: left;
-      width: 400px;
-      height: 100px;
       justify-content: center;
-      padding: 1rem;
-      margin-top: 20px;
-      border-radius: 1rem;
-      flex-wrap: wrap-reverse;
+      @include border(red);
     }
   }
 
@@ -109,11 +91,12 @@
     justify-content: center;
     align-items: center;
     height: fit-content;
-    margin: 200px 0 0 100px;
-    background: lightblue;
+    margin: -100px 0 0 200px;
     border-radius: 100%;
     width: 90%;
+    // background: lightblue;
     img {
+      @include border(white);
       z-index: 200;
     }
   }
