--- a/src/css/blog/_footer.scss
+++ b/src/css/blog/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100vw;
   height: 400px;
-  background: rgb(18, 9, 43);
+  background: $abstract;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -26,9 +26,8 @@
     }
 
     &__socialmedia {
-      width: 200px;
+      width: 250px;
       height: 50px;
-      // border: 1px solid cyan;
       color: #fff;
       display: flex;
       padding: 1rem;
