--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -3,34 +3,38 @@
   padding: 0;
   box-sizing: border-box;
 }
+@import "config";
+@import "utilities";
+@import "nav";
+@import "Homepage/header";
+@import "Homepage/Paragraph1";
+@import "../blog/Art/tree";
+@import "Homepage/articles";
+@import "Homepage/shopping";
+@import "Homepage/counselling";
+
+@import "Articlespage/articlepage-header";
+@import "Articlespage/article__artwork";
+@import "Articlespage/articlePage__body";
+@import "ArticlesPage/aritcle__preview";
+
+@import "Reader/reader";
+
+@import "Adminpage/adminpage";
+
+@import "RegisterPage/registerpage";
+@import "footer";
+
 body {
   font-family: "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode",
     Geneva, Verdana, sans-serif;
   overflow-x: hidden;
+  background-color: $background;
+  line-height: 1.5;
   .move-right {
     animation: moveRight 1s ease forwards infinite;
   }
-  @import "config";
-  @import "utilities";
-  @import "nav";
-  @import "Homepage/header";
-  @import "Homepage/Paragraph1";
-  @import "../blog/Art/tree";
-  @import "Homepage/articles";
-  @import "Homepage/shopping";
-  @import "Homepage/counselling";
 
-  @import "Articlespage/articlepage-header";
-  @import "Articlespage/article__artwork";
-  @import "Articlespage/articlePage__body";
-  @import "ArticlesPage/aritcle__preview";
-
-  @import "Reader/reader";
-
-  @import "Adminpage/adminpage";
-
-  @import "RegisterPage/registerpage";
-  @import "footer";
   .loader {
     position: absolute;
     top: 50%;
@@ -54,248 +58,15 @@ body {
   }
   .btn-imp {
     @include button(high);
-    position: relative;
-    bottom: 20px;
-    left: 20px;
   }
 
   .btn-norm {
     @include button(low);
   }
   .button:hover {
-    box-shadow: -5px 5px 50px 1px $orange;
+    box-shadow: -5px 5px 50px 1px $secondary;
   }
   .button:focus {
     box-shadow: 0 0 0 0;
-  }
-
-  .moveToLeft {
-    animation: moveToLeft 5s ease forwards;
-  }
-  .moveToRight {
-    animation: moveToRight 5s ease forwards;
-  }
-  // .centre {
-  //   animation: centre 1s ease forwards;
-  // }
-  @keyframes centre {
-    0% {
-      position: relative;
-    }
-
-    100% {
-      position: relative;
-      right: 120px;
-      margin-right: 40px;
-      z-index: 200;
-    }
-  }
-  @keyframes moveToLeft {
-    25% {
-      position: relative;
-      right: 0;
-    }
-
-    100% {
-      position: relative;
-      right: 0px;
-    }
-  }
-  @keyframes moveToRight {
-    25% {
-      position: relative;
-      left: 0;
-      margin-left: 10px;
-    }
-
-    100% {
-      position: relative;
-      left: 0px;
-      margin-left: 0px;
-    }
-  }
-  @keyframes moveRight {
-    25% {
-      position: relative;
-      left: 0;
-    }
-    50% {
-      position: relative;
-      left: 10px;
-    }
-    75% {
-      position: relative;
-      left: 0px;
-    }
-  }
-  .move-right {
-    animation: moveRight 1s ease forwards infinite;
-  }
-  .otherPageHeaders {
-    width: 100vw;
-    height: 300px;
-  }
-  .dimensionChange {
-    position: relative;
-    animation: dimensionChange 2s ease-in forwards 4s;
-  }
-
-  @keyframes dimensionChange {
-    10%,
-    50% {
-      width: 250px;
-    }
-    51%,
-    100% {
-      width: 250px;
-      height: 130px;
-    }
-  }
-  @keyframes showBack {
-    0% {
-      width: 0;
-    }
-    50% {
-      width: 50%;
-    }
-    100% {
-      width: 100%;
-    }
-  }
-  @keyframes moveRight {
-    25% {
-      position: relative;
-      left: 0;
-    }
-    50% {
-      position: relative;
-      left: 10px;
-    }
-    75% {
-      position: relative;
-      left: 0px;
-    }
-  }
-  @keyframes bounce {
-    0% {
-      opacity: 0;
-    }
-    30%,
-    50% {
-      opacity: 0;
-    }
-    55%,
-    100% {
-      opacity: 1;
-    }
-  }
-
-  @keyframes showBorder {
-    from {
-      width: 600px;
-      border-right: none;
-    }
-    to {
-      width: 490px;
-      border-right: 5px solid red;
-    }
-  }
-  @keyframes feelingDisp {
-    from {
-      top: 100px;
-      opacity: 0;
-    }
-    to {
-      top: 0px;
-      opacity: 1;
-    }
-  }
-  @keyframes expands {
-    10% {
-      transform: scale(1);
-    }
-    25% {
-      transform: scale(1.3);
-    }
-    50% {
-      transform: scale(1);
-    }
-    75% {
-      transform: scale(1.5);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @keyframes slideUp {
-    25% {
-      top: 10px;
-    }
-
-    100% {
-      top: 10px;
-      transform: rotate(360deg);
-    }
-  }
-}
-@keyframes slide {
-  from {
-    opacity: 0;
-    left: 0;
-  }
-  to {
-    opacity: 1;
-    left: 40px;
-  }
-}
-
-@keyframes shapeChange {
-  0%,
-  10% {
-    clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
-    border: 3px solid #ffd700;
-  }
-
-  15%,
-  30% {
-    clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 0%);
-    border: 3px solid #663399;
-  }
-  35%,
-  50% {
-    clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
-    border: 3px solid #ffd700;
-  }
-
-  55%,
-  70% {
-    clip-path: polygon(50% 100%, 100% 50%, 100% 100%, 0% 0%);
-    border: 3px solid #663399;
-  }
-  75%,
-  90% {
-    clip-path: polygon(50% 1100%, 100% 00%, 100% 10%, 0% 0%);
-    border: 3px solid #4169e1;
-  }
-  100% {
-    clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 100%);
-    border: 3px solid violet;
-  }
-}
-
-.btnConListShow {
-  animation: listSlide 0.3s ease-in-out forwards;
-}
-
-.btnConListHide {
-  animation: listSlide 0.3s ease-in-out forwards;
-}
-@keyframes listSlide {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-    left: 20px;
   }
 }
