--- a/src/css/blog/RegisterPage/_registerpage.scss
+++ b/src/css/blog/RegisterPage/_registerpage.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to right, #2ac0d9, #5576c3);
+  // background: linear-gradient(to right, #2ac0d9, #5576c3);
+  background: linear-gradient(to right, $abstract, $primary);
   @include border(blue);
 
   &__header {
@@ -20,7 +21,7 @@
     justify-content: center;
     align-items: center;
     h2 {
-      color: #00bfff;
+      color: $background;
     }
 
     .error {
@@ -63,11 +64,11 @@
         padding: 1rem;
         font-size: 1rem;
         border: none;
-        border-bottom: 2px solid deepskyblue;
+        border-bottom: 2px solid $abstract;
         outline: none;
         transition: all .3s ease-in-out;
         &:focus {
-          border-bottom: 2px solid gold;
+          border-bottom: 2px solid $background;
           padding-left: 2rem;
         }
       }
@@ -86,7 +87,7 @@
       p {
         color: grey;
         b {
-          color: #00bfff;
+          color: $abstract;
         }
       }
     }
@@ -97,15 +98,15 @@
       button {
         height: 60px;
         width: 150px;
-        background: #00bfff;
+        background: $abstract;
         color: #fff;
         border: none;
         cursor: pointer;
         font-size: 1.2rem;
-        box-shadow: 2px 12px 15px 1px lighten(#00bfff, 30%);
+        box-shadow: 2px 12px 15px 1px lighten($primary, 30%);
 
         &:hover {
-          background: darken(#00bfff, 20%);
+          background: darken($primary, 20%);
         }
       }
       h4 {
@@ -113,7 +114,7 @@
         color: grey;
         a {
           text-decoration: none;
-          color: #00bfff;
+          color: $background;
         }
       }
     }
@@ -121,7 +122,7 @@
   &__optional {
     width: 500px;
     height: 200px;
-    background-color: #00affe;
+    background-color: $background;
     display: flex;
     flex-direction: column;
     justify-content: center;
